// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label With Link Element renders a label with link 1`] = `
<div
  className="tribe-editor__labeled-item tribe-editor__label-with-link"
>
  <span
    className="tribe-editor__labeled-item__label"
  />
  <a
    className="tribe-editor__link tribe-editor__label-with-link__link"
    href="#"
  >
    test-text
  </a>
</div>
`;

exports[`Label With Link Element renders a label with link with class 1`] = `
<div
  className="tribe-editor__labeled-item tribe-editor__label-with-link test-class"
>
  <span
    className="tribe-editor__labeled-item__label"
  />
  <a
    className="tribe-editor__link tribe-editor__label-with-link__link"
    href="#"
  >
    test-text
  </a>
</div>
`;

exports[`Label With Link Element renders a label with link with label 1`] = `
<div
  className="tribe-editor__labeled-item tribe-editor__label-with-link"
>
  <span
    className="tribe-editor__labeled-item__label"
  >
    test label
  </span>
  <a
    className="tribe-editor__link tribe-editor__label-with-link__link"
    href="#"
  >
    test-text
  </a>
</div>
`;
